tests/fixtures/positive/code-style/ProhibitSuppressWarnings_NormalCode.cls
// Valid: No suppressions, normal code
public class Example1 {
    public void method() {
        int used = 42;
        System.debug(used);
    }
}

