tests/fixtures/negative/code-style/ProhibitSuppressWarnings_NOPMD_Lowercase.cls
// Violation: NOPMD comment (lowercase)
public class Example6 {
    public void method() {
        int unused = 42; // nopmd
    }
}

